# legal_management-system

./: .gitignore  README.md  app.py
backend/: main.py  pyproject.toml  requirements.txt
backend/Case Classification/: Case Classification.ipynb
backend/Case Prioritization/: Case_priority.ipynb
backend/services/: classifier.py  prioritizer.py  rag.py
backend/utils/: models.py  preprocessing.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Chat.tsx  Classifier.tsx  Prioritizer.tsx
